--- a/css/style.css
+++ b/css/style.css
@@ -1,19 +1,24 @@
 *{
     line-height: 100%;
     box-sizing: border-box;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif
 }
 header {
     height: 95px;
-    background: #777;
+    background:rgb(32, 103, 147);
     padding-bottom: 30px;
 }
 header div{
     max-width: 960px;
     margin: auto;
 }
-header img {
+header > div > img{
     display: inline-block;
-    margin: 12.5px 60px 0px 12.5px;
+    width: 20em;
+    margin-top: 5px;
+    position: relative;
+    bottom: 5px;
+    right: 300px;
 }
 
 header nav{
@@ -23,8 +28,54 @@ header nav{
     vertical-align: top;
 }
 
-nav li{
+nav > ul > li{
     display: inline-block;
     line-height: 70px;
     margin-right: 60px;
+    border-color: white;
+    border-style: outset;
+    border-width: 4px;
+    width: 150px;
+    text-align: center;
+    position: relative;
+    left: 120px;
+    bottom: 190px;
+}
+main{
+    position: relative;
+}
+
+main > article {
+    position: relative;
+    top: 100px;   
+}
+main > article > img {
+    position: relative;
+    left: 510px;
+    padding-bottom: 50px;
+}
+main > article > p{
+    padding-bottom: 50px;
+}
+
+main > article > ul{
+    list-style-type: none;
+    display: inline;
+}
+
+#fam{
+    position: relative;
+    left: 100px;
+    width: 600px;
+}
+
+#frosted{
+    position: relative;
+    left: 850px;
+    bottom: 350px;
+    width: 550px;
+}
+
+div{
+    align-content: center;
 }
