--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,12 @@
     box-sizing: border-box;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif
 }
+body{
+    background-image: url('/images/abstract-abstract-art-abstract-background-1629236.jpg');
+    background-size: 100%;
+    color: White;
+    font-size: 125%;
+}
 header {
     height: 95px;
     background:rgb(32, 103, 147);
@@ -12,13 +18,12 @@ header div{
     max-width: 960px;
     margin: auto;
 }
-header > div > img{
+header img{
     display: inline-block;
     width: 20em;
     margin-top: 5px;
     position: relative;
     bottom: 5px;
-    right: 300px;
 }
 
 header nav{
@@ -38,8 +43,7 @@ nav > ul > li{
     width: 150px;
     text-align: center;
     position: relative;
-    left: 120px;
-    bottom: 190px;
+    bottom: 20px;
 }
 main{
     position: relative;
@@ -56,6 +60,7 @@ main > article > img {
 }
 main > article > p{
     padding-bottom: 50px;
+    text-align: center;
 }
 
 main > article > ul{
@@ -77,5 +82,27 @@ main > article > ul{
 }
 
 div{
-    align-content: center;
+    text-align: center;
+    display: inline;
+    margin: 5px;
+}
+
+div ul{
+    list-style-type: none;
+}
+
+section{
+    text-align: center;
+    display: inline;
+    margin: 5px;
+}
+
+Section ul{
+    list-style-type: none;
+}
+
+section p{
+    width:500px;
+    position: relative;
+    left: 500px;
 }
