--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif
 }
 body{
-    background-image: url('/images/abstract-abstract-art-abstract-background-1629236.jpg');
+    background-image: url('https://herndont.github.io/salmon_cookies_class201d45/images/abstract-abstract-art-abstract-background-1629236.jpg');
     background-size: 100%;
     color: White;
     font-size: 125%;
